# src/routes/auth.routes.js
@@ -1,8 +1,11 @@
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/auth.controller');
+const validate = require('../middlewares/validate');
+const authValidator = require('../validators/auth.validator');
 
-router.post('/login', controller.login);
+router.post('/register', validate(authValidator.register), controller.register);
+router.post('/login', validate(authValidator.login), controller.login);
 router.post('/logout', controller.logout);
 router.post('/refresh-token', controller.refreshToken);
 router.post('/forgot-password', controller.forgotPassword);
